# eq-ala

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.local  Makefile  README.md  db.sqlite
src/: main.rs
src/service/: db.rs  mod.rs  telegram.rs
