[package]
name = "eq-ala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
dotenvy = "0.15.7"
log = "0.4.21"
log4rs = "1.3.0"
reqwest = "0.11.25"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.114"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Use Link Time Optimization.
codegen-units = 1   # Compile the whole crate at once.
debug = false       # Strip debug symbols from the binary.

[profile.dev]
debug = true
